@@ -1,14 +1,16 @@
 package com.hm.picplz.domain.photographer.service;
 
-import com.hm.picplz.domain.photographer.domain.PhotoMood;
-import com.hm.picplz.domain.photographer.domain.Photographer;
-import com.hm.picplz.domain.photographer.repository.PhotoMoodRepository;
-import lombok.RequiredArgsConstructor;
+import java.util.List;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import com.hm.picplz.domain.photographer.domain.PhotoMood;
+import com.hm.picplz.domain.photographer.domain.Photographer;
+import com.hm.picplz.domain.photographer.dto.PhotoMoodDto;
+import com.hm.picplz.domain.photographer.repository.PhotoMoodRepository;
+
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
@@ -17,17 +19,16 @@ public class PhotoMoodService {
     private final PhotoMoodRepository photoMoodRepository;
 
     @Transactional
-    public List<PhotoMood> createPhotoMood(List<String> photoMoodContents, Photographer photographer) {
+    public PhotoMoodDto.PhotoMoodRes createPhotoMood(List<String> photoMoodContents, Photographer photographer) {
         List<PhotoMood> photoMoods = photoMoodContents.stream()
                 .map(photoMood ->
                         PhotoMood.builder()
                                 .photographer(photographer)
                                 .content(photoMood)
                                 .build())
-                .collect(Collectors.toList());
+                .toList();
 
         photoMoodRepository.saveAll(photoMoods);
-
-        return photoMoods;
+        return PhotoMoodDto.PhotoMoodRes.of(photoMoods);
     }
 }
